# api-code-harvest

./: README.md
.claude/tools/search-hub/: .gitignore  main.py  package.json  repro_test.py  test_isError.py  test_keys.py  test_router.py  test_stdio.py
.claude/tools/search-hub/core/: key_rotator.py  router.py  schema_minimizer.py
.claude/tools/search-hub/providers/: __init__.py  base.py  firecrawl.py  tavily.py
api-code-harvest/: .gitignore  config.yaml  pyproject.toml
api-code-harvest/docs/specs/: 2026-07-12-api-code-harvester.md
api-code-harvest/docs/superpowers/plans/: 2026-07-13-gmail-alias-imap.md  2026-07-15-hvoy-cun-harvest-v2-implement.md
api-code-harvest/docs/superpowers/specs/: 2026-07-15-hvoy-cun-harvest-v2-design.md
api-code-harvest/src/: config.py  main.py  models.py  storage.py  utils.py
api-code-harvest/src/email/: gmail_api.py  yahoo_checker.py
api-code-harvest/src/sites/: base.py  cun.py  hvoy.py
api-code-harvest/tests/: test_config.py  test_cun.py  test_e2e.py  test_gmail_api.py  test_hvoy.py  test_main.py  test_models.py  test_storage.py  test_utils.py
docs/superpowers/plans/: 2026-06-29-loop-engineering-ci-fix-plan.md  2026-06-30-youtube-subscriber-rankings-exporter.md
docs/superpowers/specs/: 2026-06-24-youtube-subscriber-rankings-design.md  2026-06-29-loop-engineering-ci-fix-design.md  2026-07-09-search-hub-mcp-design.md
